--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,31 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.rajaraman.interceptincomingcall"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.rajaraman.interceptincomingcall"
     android:versionCode="1"
-    android:versionName="1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+    android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    
-    <supports-screens android:resizeable="true"
-                  android:smallScreens="true"
-                  android:normalScreens="true"
-                  android:largeScreens="true"
-                  android:xlargeScreens="true"
-                  android:anyDensity="true"/>
-    
+
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:resizeable="true"
+        android:smallScreens="true"
+        android:xlargeScreens="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
-        <!-- 
+
+        <!--
         <activity
             android:name="com.rajaraman.interceptincomingcall.FullscreenActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -35,41 +37,41 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        </activity>
         -->
-        
-        <service
-            android:name="com.rajaraman.interceptincomingcall.IncomingCallService"/>
 
-       <!--  This is now handled in IncomingCallService
-       <receiver android:name="com.rajaraman.interceptincomingcall.MyBroadCastReceiver" >
+        <service android:name="com.rajaraman.interceptincomingcall.IncomingCallService" />
+
+        
+        <!--
+        This is now handled in IncomingCallService.java 
+        <receiver android:name="com.rajaraman.interceptincomingcall.PhoneStateChangedReceiver" >
             <intent-filter android:priority="99999" >
                 <action android:name="android.intent.action.PHONE_STATE" />
             </intent-filter>
         </receiver>
         -->
         
-        <receiver android:name="com.rajaraman.interceptincomingcall.BootCompletedReceiver">  
-    		<intent-filter>  
-        		<action android:name="android.intent.action.BOOT_COMPLETED" />  
-    		</intent-filter>  
-		</receiver>
-
+        <receiver android:name="com.rajaraman.interceptincomingcall.BootCompletedReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+        
         <activity
             android:name="com.rajaraman.interceptincomingcall.IncomingCallActivity"
             android:label="@string/title_activity_incoming_call"
             android:noHistory="true" >
-            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            
             <intent-filter>
-                <action android:name="android.intent.action.ANSWER"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="android.intent.action.ANSWER" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-            
         </activity>
     </application>
 
